--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Montserrat:wght@300;400;700&display=swap');
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
-html {
+html{
     font-size: 10px;
+    font-family: 'Montserrat', sans-serif;
+    scroll-behavior: smooth;
 }
-
-a {
+a{
     text-decoration: none;
 }
-
 .container {
     min-height: 100vh;
     width: 100%;
@@ -20,125 +20,276 @@ a {
     justify-content: center;
 }
 
-p {
+p{
     color: black;
     font-size: 1.4rem;
     margin-top: 5px;
     line-height: 2.5;
-    font-weight: 300;
-    letter-spacing: 0.05rem;
+    font-weight: 300px;
+    letter-spacing: .05rem;
 }
 
-img {
+img{
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-.section-title {
+.section-title{
     font-size: 4rem;
     font-weight: 300;
     color: black;
     margin-bottom: 10px;
     text-transform: uppercase;
-    letter-spacing: 0.2rem;
+    letter-spacing: .2rem;
     text-align: center;
+ }
+ .section-title span{
+    color: rgb(255,77,0);
+ }
+
+.cta{
+   display: inline-block;
+   padding: 10px 30px;
+   color: white;
+   background-color: transparent;
+   border: 2px solid rgb(0, 0, 0);
+   font-size:  2rem;
+   text-transform: uppercase;
+   letter-spacing: 0.1rem;
+   margin-top: 30px; 
+   transition: 0.3s ease;
+   transition-property: background-color, color;
 }
 
-.section-title span {
-    color: rgb(255, 77, 0);
+.cta:hover{
+   color: rgb(255, 255, 255);
+   background-color: black;
 }
 
-.cta {
-    display: inline-block;
-    padding: 10px 30px;
-    background-color: transparent;
-    border: 2px solid rgb(0, 0, 0);
-    font-size: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-top: 30px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+.brand h1{
+   font-size: 3rem;
+   text-transform: uppercase;
+   color: white;
+}
+.brand h1 span{
+   color: black;
 }
 
-.cta:hover {
-    color: white;
-    background-color: black;
+#header{
+   position: fixed;
+   z-index: 1000;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: auto;
 }
 
-#one {
-    background-image: url(./joanna-kosinska-1_CMoFsPfso-unsplash.jpg);
+#header .header{
+   min-height: 8vh;
+   background-color: rgba(31, 30, 30, 0.24);
+   transition: .3s ease background-color;
+ 
+}
+
+#header .nav-bar{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   width: 100%;
+   height: 100%;
+   max-width: 1300px;
+   padding: 0 10px;
+}
+
+#header .nav-list ul{
+   list-style: none;
+   position: absolute;
+   background-color: rgb(31, 30, 30);
+   width: 100vw;
+   height: 100vh;
+   left: 100%;
+   top: 0;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   z-index: 1;
+   overflow-x: hidden;
+   transition: .7s ease left;
+}
+#header .nav-list ul.active{
+   left: 0;
+}
+
+#header .nav-list ul a{
+   font-size: 2.5rem;
+   font-weight: 500;
+   letter-spacing: .2rem;
+   text-decoration: none;
+   color: white;
+   text-transform: uppercase;
+   padding: 20px;
+   display: block;
+}
+
+#header .nav-list ul a::after{
+   content: attr(data-after);
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50% , -50%) scale(0);
+   color: rgba(240, 248, 255, 0.021);
+   font-size: 10rem;
+   letter-spacing: 50px;
+   z-index: -1;
+   transition: .3s ease letter-spacing;
+}
+
+#header .nav-list ul li:hover a::after{
+   transform: translate(-50% , -50%) scale(1);
+   letter-spacing: initial;
+}
+
+#header .hamb{
+   height: 60px;
+   width: 60px;
+   display: inline-block;
+   border: 3px solid white ;
+   border-radius: 50%;
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   z-index: 100;
+   cursor: pointer;
+   transform: scale(.8);
+   margin-right: 20px;
+}
+
+#header .hamb .bar{
+   height: 2px;
+   width: 30px;
+   position: relative;
+   background-color: white;
+   z-index: -1;
+}
+
+#header .hamb::after{
+   position: absolute;
+   content: '';
+   height: 100%;
+   width: 100%;
+   border-radius: 50%;
+   border: 3px solid white;
+   animation: hamb_puls 1s ease infinite;
+}
+
+#header .hamb .bar::after,
+#header .hamb .bar::before{
+   content: '';
+   position: absolute;
+   height: 100%;
+   width: 100%;
+   left: 0;
+   background-color: white;
+   transition: .3s ease;
+   transition-property: top, bottom;
+}
+
+#header .hamb .bar::after{
+   top: 8px;
+}
+#header .hamb .bar::before{
+   bottom: 8px;
+}
+
+#header .hamb.active .bar::after{
+   top: 0;
+}
+#header .hamb.active .bar::before{
+   bottom: 0;
+}
+
+
+
+#one{
+    background-image: url(./img/one.png);
     background-size: cover;
     background-position: top center;
-    display: flex;
-    flex-direction: column;
+    
+}
+
+#one .one{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 50px;
+    padding: 0, 50px;
     justify-content: flex-start;
 }
 
-#one h1 {
+
+ #one h1{
+    display: block;
     width: fit-content;
     font-size: 4rem;
     position: relative;
-    color: rgb(0, 0, 0);
-    animation: text_reveal 0.5s ease forwards;
-    opacity: 0;
-}
+    color: transparent;
+    animation: text_reveal .5s ease forwards;
+    animation-delay: 1.5s ;
+ }
 
-#one h1:nth-child(1) { animation-delay: 1.5s; }
-#one h1:nth-child(2) { animation-delay: 2.5s; }
-#one h1:nth-child(3) { animation-delay: 3.5s; }
+ #one h1:nth-child(1){
+    animation-delay: 1.5s;
+ }
+ #one h1:nth-child(2){
+    animation-delay: 2.5s;
+ }
+ #one h1:nth-child(3){
+    animation-delay: 3.5s;
+ }
 
-#one h1 span {
+
+ #one h1 span{
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    width: 100%;
+    width: 0;
     background-color: rgb(255, 255, 255);
-    animation: text_reveal_box 1s ease forwards;
+    animation: text_reveal_box 1s ease;
+    animation-delay: 1s ;
+ }
+
+#one h1:nth-child(1) span{
+    animation-delay: 1s ;
 }
 
-#one h1:nth-child(1) span { animation-delay: 1s; }
-#one h1:nth-child(2) span { animation-delay: 2s; }
-#one h1:nth-child(3) span { animation-delay: 3s; }
-
-#one .cta {
-    display: inline-block;
-    padding: 10px 30px;
-    background-color: transparent;
-    border: 2px solid rgb(0, 0, 0);
-    font-size: 2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-top: 30px;
-    transition: background-color 0.3s ease, color 0.3s ease;
+#one h1:nth-child(2) span{
+    animation-delay: 2s;
 }
 
-#one .cta:hover {
-    color: white;
-    background-color: black;
+#one h1:nth-child(3) span{
+    animation-delay: 3s;
 }
 
-#services {
+
+ #services .services {
     flex-direction: column;
     text-align: center;
     max-width: 1500px;
     margin: 0 auto;
     padding: 100px 0;
-}
+ }
 
-#services .service-bottom {
+ #services .service-bottom{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     margin-top: 50px;
-}
+ }
 
-#services .service-item {
+ #services .service-item{
     flex-basis: 80%;
     display: flex;
     align-items: flex-start;
@@ -146,15 +297,17 @@ img {
     flex-direction: column;
     padding: 30px;
     border-radius: 10px;
-    background-image: url(./1111.jpg);
+    background-image: url(./img/1111.jpg);
     background-size: cover;
     margin: 10px 5%;
     position: relative;
     z-index: 1;
     overflow: hidden;
-}
 
-#services .service-item::after {
+    
+ }
+
+ #services .service-item::after{
     content: '';
     position: absolute;
     left: 0;
@@ -162,265 +315,394 @@ img {
     height: 100%;
     width: 100%;
     background-color: rgb(0, 0, 0);
-    opacity: 0.8;
+    opacity: .5;
     z-index: -1;
-}
-
-#services .service-bottom .icon {
+ }
+ 
+ #services .service-bottom .icon{
     height: 80px;
     width: 80px;
     margin-bottom: 20px;
-}
+ }
 
-#services .service-item h2 {
+ #services .service-item h2{
     font-size: 2rem;
     color: white;
     margin-bottom: 10px;
     text-transform: uppercase;
-}
+ }
 
-#services .service-item p {
+ #services .service-item p{
     color: white;
-}
+ }
 
-#projects .projects {
-    flex-direction: column;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 100px 0;
-    display: flex;
-}
 
-#projects .all-projects {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
+ #projects .projects{
+   flex-direction: column;
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 100px 0;
+ }
 
-#projects .project-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 80%;
-    margin: 20px auto;
-    overflow: hidden;
-    border-radius: 10px;
-}
+ #projects .projects-header h1{
+   margin-bottom: 50px;
+ }
 
-#projects .project-info {
-    padding: 30px;
-    flex-basis: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background-image: linear-gradient(60deg, #29323c 0%, rgb(255, 3, 3));
-    color: white;
-}
+ #projects .all-projects{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+ }
 
-#projects .project-info h1 {
-    font-size: 4rem;
-    font-weight: 500;
-}
+ #projects .project-item{
+   display: flex;
+   align-items:center;
+   justify-content: center;
+   flex-direction: column;
+   width: 80%;
+   margin: 20px auto;
+   overflow: hidden;
+   border-radius: 10px;
+ }
 
-#projects .project-info h2 {
-    font-size: 1.8rem;
-    font-weight: 500;
-    margin-top: 10px;
-}
+ #projects .project-info{
+   padding: 30px;
+   flex-basis: 50%;
+   height: 100%;
+   display: flex;
+   align-items: flex-start;
+   flex-direction: column;
+   background-image: linear-gradient(60deg, #29323c 0%, #29323c 100%);
+   color: white;
+ }
+ #projects .project-info h1 {
+   font-size:  4rem;
+   font-weight: 500;
+ }
 
-#projects .project-info p {
-    color: white;
-}
+ #projects .project-info h2 {
+   font-size:  1.8rem;
+   font-weight: 500;
+   margin-top: 10px;
+ }
+ #projects .project-info p{
+   color: white;
+ }
 
-#projects .project-img {
-    flex-basis: 50%;
-    height: 300px;
-    position: relative;
-    overflow: hidden;
-}
+ #projects .project-img{
+   flex-basis:  50%;
+   height: 300px;
+   overflow: hidden;
+   position: relative;
+ }
 
-#projects .project-img::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    background-color: black;
-    opacity: 0.5;
-}
+ #projects .project-img::after{
+   content: '';
+   position: absolute;
+   left: 0;
+   top: 0;
+   height: 100%;
+   width: 100%;
+   background-color: black;
+   opacity: .5; 
+ }
 
-#projects .project-img img{
-    transition: .3s ease transform;
-}
+ #projects .project-img img{
+   transition: .3s ease transform;
+ }
 
-#projects .project-item:hover .project-img {
-    transform: scale(1.1);
-    
-}
+ #projects .project-item:hover .project-img img{
+   transform: scale(1.1);
+ }
 
 #about .about{
-    flex-direction:column-reverse ;
-    text-align: center;
-    max-width: center;
-    margin: 0 auto;
-    padding: 100px 20px;
+   flex-direction: column-reverse;
+   text-align: center;
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 100px 20px;
 }
 
 #about .col-left{
-    width:250px;
-    height:360px;
-
+   width: 250px;
+   height: 360px;
 }
 #about .col-right{
-    width: 100%;
+   width: 100%;
 }
 #about .col-right h2{
    font-size: 1.8rem;
-   font-weight:500;
-   letter-spacing:1.2rem;
-   margin-bottom:10px; 
+   font-weight: 500;
+   letter-spacing: 1.2rem;
+   margin-bottom: 10px;
 }
 
 #about .col-right p{
-    margin-bottom:20px;
-}
+   margin-bottom: 20px;
+} 
 
 #about .col-right .cta{
-    color:red;
-    margin-bottom:50px;
-    padding:10px 20px;
-    font-size: 2rem;
+   color: red;
+   margin-bottom: 50px;
+   padding: 10px 20px;
+   font-size: 2rem;
 }
+
 #about .col-left .about-img{
-   height:100%;
-   width:100%;
+   height: 100%;
+   width: 100%;
    position: relative;
-   border: 5px solid rgb(253,141,141);
+   border: 5px solid rgb(253, 141, 141);
+}
+#about .col-left .about-img::after{
+   content: '';
+   position: absolute;
+   left: -33px;
+   top: 19px;
+   height: 98%;
+   width: 98%;
+   border: 7px solid rgb(255, 0, 0);
+   z-index: -1;
 }
 
 
-
-#about .col-left .about-img {
-    position: relative; /* ✅ Required for ::after to work */
+#contact .contact{
+   flex-direction: column;
+   max-width: 1200px;
+   margin: 0 auto;
 }
 
-#about .col-left .about-img::after {
-    content: '';
-    position: absolute;
-    left: -33px;
-    top: 19px;
-    height: 98%;
-    width: 98%; 
-    border: 7px solid rgb(255, 0, 0); 
-    z-index: -1;
+#contact .contact-items{
+   width: 400px;
 }
 
-#contact .contact {
-    flex-direction: column;
-    max-width: 1200px;
-    margin: 0 auto;
+#contact .contact-item{
+   width: 80%;
+   padding: 20px;
+   text-align: center;
+   border-radius: 10px;
+   padding: 30px;
+   margin: 30px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   box-shadow: 0px 0px 18px 0 #0000002c;
+   transition: .3s ease box-shadow;
+}
+#contact .contact-item:hover{
+   box-shadow:  0px 0px 5px 0 #0000002c;
 }
 
-#contact .contact-items {
-    width: 400px;
+#contact .icon{
+   width: 70px;
+   margin: 0 auto;
+   margin-bottom: 10px;
 }
 
-#contact .contact-item {
-    width: 80%;
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-    margin: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0px 0px 18px 0 #0000002c;
-    border: 2px solid red; 
+#contact .contact-info h1{
+   font-size:  2.5rem;
+   font-weight: 500;
+   margin-bottom: 5px;
+}
+
+#contact .contact-info h2{
+   font-size: 1.3rem;
+   line-height: 2rem;
+   font-weight: 500;
+}
+
+#footer{
+   background-image: linear-gradient(60deg, #0077ff 0%, #485563 100%);
+}
+
+#footer .footer{
+   min-height: 200px;
+   flex-direction: column;
+   padding-top: 50px;
+   padding-bottom: 10px;
+}
+
+#footer h2{
+   color: white;
+   font-size: 1.8rem;
+   font-weight: 500;
+   letter-spacing: .1rem;
+   margin-top: 10px;
+   margin-bottom: 10px;
+}
+
+#footer .social-icon{
+   display: flex;
+   margin-bottom: 30px;
+}
+ 
+#footer .social-item{
+   height: 50px;
+   width: 50px;
+   margin: 0 5px ;
+}
+
+#footer .social-item img{
+   filter: grayscale(1);
+   transition: .3s ease filter;
+}
+#footer .social-item:hover img{
+   filter: grayscale(0);
+}
+
+#footer p{
+   color: white;
+}
+
+@keyframes hamb_puls {
+   0%{
+      opacity: 1;
+      transform: scale(1);
+   }
+   100%{
+      opacity: 0;
+      transform: scale(1.4);
+   }
    
 }
-
-
-
-img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 8px; /* Optional: gives a clean look */
-}
-#about .about-img {
-    width: 200px;
-    height: 250px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-#contact .contact-item {
-    width: 80%;
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
-    margin: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0px 0px 18px 0 #0000002c;
-    border: 2px solid red;
-}
-
-
-img.center-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100px; /* adjust as needed */
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@keyframes text_reveal_box {
-    0% {
-        width: 0;
-        left: 0;
-    }
-    50% {
+ @keyframes text_reveal_box{
+    50%{
         width: 100%;
         left: 0;
     }
-    100% {
+    100%{
         width: 0;
         left: 100%;
     }
-}
-
+ }
 @keyframes text_reveal {
-    100% {
-        opacity: 1;
+    100%{
+        color: black;
     }
+}
+ 
+@media only screen and (min-width: 768px) {
+	.cta {
+		font-size: 2.5rem;
+		padding: 20px 60px;
+	}
+	h1.section-title {
+		font-size: 6rem;
+	}
+
+	
+	#one h1 {
+		font-size: 7rem;
+	}
+	
+	#services .service-bottom .service-item {
+		flex-basis: 45%;
+		margin: 2.5%;
+	}
+	
+	#projects .project-item {
+		flex-direction: row;
+	}
+	#projects .project-item:nth-child(even) {
+		flex-direction: row-reverse;
+	}
+	#projects .project-item {
+		height: 400px;
+		margin: 0;
+		width: 100%;
+		border-radius: 0;
+	}
+	#projects .all-projects .project-info {
+		height: 100%;
+	}
+	#projects .all-projects .project-img {
+		height: 100%;
+	}
+	
+	#about .about {
+		flex-direction: row;
+	}
+	#about .col-left {
+		width: 600px;
+		height: 400px;
+		padding-left: 60px;
+	}
+	#about .about .col-left .about-img::after {
+		left: -45px;
+		top: 34px;
+		height: 98%;
+		width: 98%;
+		border: 10px solid crimson;
+	}
+	#about .col-right {
+		text-align: left;
+		padding: 30px;
+	}
+	#about .col-right h1 {
+		text-align: left;
+	}
+	
+	#contact .contact {
+		flex-direction: column;
+		padding: 100px 0;
+		align-items: center;
+		justify-content: center;
+		min-width: 20vh;
+	}
+	#contact .contact-items {
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-evenly;
+		margin: 0;
+	}
+	#contact .contact-item {
+		width: 30%;
+		margin: 0;
+		flex-direction: row;
+	}
+	#contact .contact-item .icon {
+		height: 100px;
+		width: 100px;
+	}
+	#contact .contact-item .icon img {
+		object-fit: contain;
+	}
+	#contact .contact-item .contact-info {
+		width: 100%;
+		text-align: left;
+		padding-left: 20px;
+	}
+ 
+@media only screen and (min-width: 1200px) {
+
+   #header .hamb{
+      display: none;
+   }
+   #header .nav-list ul{
+      position: initial;
+      display: block;
+      height: auto;
+      width: fit-content;
+      background: transparent;
+   }
+
+   #header .nav-list ul li{
+      display: inline-block;
+   }
+   #header .nav-list ul li a{
+      font-size: 1.8rem;
+   }
+   #header .nav-list ul a:after{
+      display: none;
+   }
+
+	#services .service-bottom .service-item {
+		flex-basis: 22%;
+		margin: 1.5%;
+	}
+}
 }
 
